third working commit

--- a/pom.xml
+++ b/pom.xml
@@ -167,5 +167,18 @@
         </configuration>
       </plugin>
     </plugins>
+
+
+
+    <testResources>
+      <testResource>
+        <directory>/src/test/properties</directory>
+        <includes>
+          <include>log4j.properties</include>
+        </includes>
+
+      </testResource>
+
+    </testResources>
   </build>
 </project>
